Fix cumulitive layout shift on expedition pages

--- a/css/main.scss
+++ b/css/main.scss
@@ -258,6 +258,7 @@ hr {
 
 .container-image img {
   display: block;
+  height: auto;
   margin: 0 auto;
   max-width: 100%;
 }
